--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "project01_rest_api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Learn RestFull API",
+  "main": "./src/index.mjs",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./src/index.mjs"
   },
-  "author": "Learn to nodejs by Piyush Garg",
+  "keywords": [
+    "javascript",
+    "backend"
+  ],
+  "author": "Learn to nodejs mongoDB and express",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "mongoose": "^8.1.2",
     "nodemon": "^3.0.3"
   }
 }
